# txt_parser

./: .gitignore  pyproject.toml
scripts/: generate_csvs.py
src/txt_to_crosstab/: __init__.py  cli.py  config.py  io.py  models.py  parse_filename.py  parse_time.py  parse_txt.py  process_txt_to_csv.py  transforms.py  validation.py
tests/: test_end_to_end.py
