[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "txt_to_crosstab"
version = "0.1.0"
description = "Chromatogram validation pipeline"
authors = [
    {name = "Alex Engstrom", email = "aengstrom@utah.gov"}
]
requires-python = ">=3.10"
[tool.setuptools.packages.find]
where = ["src"]